--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
           <li><a href="http://g.raphaeljs.com/">gRaphaël 0.4.1</a></li>
           <li><a href="http://code.google.com/appengine/">Google App Engine</a></li>
           <li><a href="http://twitter.com/ento">@ento</a></li>
+          <li><a id="forkme" href="https://github.com/ento/eqjpviz/">Fork me on GitHub!</a></li>
         </ul>
       </div>
     </div>
