fix some irregularly named vars, remove unused function

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="js/eqjpviz.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
-        $("#last_update").text(""+to_localtime({{scrape_list_ran_at|js_date}}));
+        $("#last_update").text(""+toLocalTime({{scrape_list_ran_at|js_date}}));
       });
     </script>
     <link rel="stylesheet" type="text/css" href="css/cupertino/jquery-ui-1.8.10.custom.css" />
